tests/golden/type_errors/array_reduce_callback_arity.cd
reduce([1], 0, fun (acc) { return acc; });
