tests/golden/type_errors/array_reduce_callback_arity.err
Type error at 1:16: expected 2 parameters but got 1
  reduce([1], 0, fun (acc) { return acc; });
                 ^
